Depend on header files.

--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -1,6 +1,11 @@
 
 all:: seccomp.o filter.o
 
-.cpp.o:
+seccomp.o: seccomp.cpp seccomp.h
 	$(CXX) -c $<
 
+filter.o: filter.cpp seccomp.h
+	$(CXX) -c $<
+
+clean::
+	rm -f *~ *.o
