A buggy, but compiled, implementation of the bridge.

--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -8,7 +8,7 @@ filter.o: filter.cpp seccomp.h
 	$(CXX) -c $<
 
 bridge.o: bridge.cpp bridge.h
-	$(CXX) -c $<
+	$(CXX) -c $< -I../toolkits
 
 clean::
 	rm -f *~ *.o
