Handle dup & dup2 in the bridge.

--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -1,14 +1,22 @@
 
-all:: seccomp.o filter.o bridge.o
+CFLAGS := -Wall -Werror -fpic
+
+all:: libtongdao.so
+
+libtongdao.so: seccomp.o filter.o bridge.o bootstrap.o
+	$(CXX) -shared -o $@ seccomp.o filter.o bridge.o bootstrap.o
 
 seccomp.o: seccomp.cpp seccomp.h bridge.h
-	$(CXX) -c $<
+	$(CXX) $(CFLAGS) -c $<
 
 filter.o: filter.cpp seccomp.h
-	$(CXX) -c $<
+	$(CXX) $(CFLAGS) -c $<
 
 bridge.o: bridge.cpp bridge.h
-	$(CXX) -c $< -I../toolkits
+	$(CXX) $(CFLAGS) -c $< -I../toolkits
+
+bootstrap.o: bootstrap.cpp
+	$(CXX) $(CFLAGS) -c $<
 
 clean::
-	rm -f *~ *.o
+	rm -f *~ *.o libtongdao.so
