Implement and use the syscall trampoline.
Some syscalls are trapped by the filter, however, we need to redo it
in the signal handler of SIGSYS.  If we call syscalls again in the
signal handler, it will be trapped again, and never success.  By
setting a trampoline code at a fixed address range (0x200000000000 ~
+4096), the filter always skip/allow all syscalls makde from this
range.  The signal handler call this trampoline to make syscalls to by
pass the filter.

--- a/sandbox/tests/Makefile
+++ b/sandbox/tests/Makefile
@@ -1,11 +1,17 @@
 
-all:: test_dup
+all:: test_dup tdtrampoline test_trampoline
 
 test_dup: test_dup.cpp
 	$(CXX) -o $@ $<
 
-test: test_dup
+test_trampoline: test_trampoline.cpp
+	$(CXX) -o $@ $<
+
+tdtrampoline: faketrampoline.cpp
+	$(CXX) -o $@ $<
+
+test: test_dup test_trampoline
 	./test.sh ./test_dup
 
 clean::
-	rm -f *~ test_dup
+	rm -f *~ test_dup test_trampoline tdtrampoline
