Try to use ptrace.

--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,5 +1,8 @@
 
-all:: tryseccomp
+all:: tryseccomp tryptrace
 
 tryseccomp: tryseccomp.cpp
 	$(CXX) -o $@ tryseccomp.cpp -lpthread
+
+tryptrace: tryptrace.cpp
+	$(CXX) -o $@ tryptrace.cpp
