Provide a tiny set of libc.

--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -1,15 +1,21 @@
 
-CFLAGS := -Wall -Werror -fpic -fvisibility=hidden
+CFLAGS := -Wall -Werror -fpic -fvisibility=hidden -fno-builtin -nostdlib
+
+libtongdao_so_OBJS := seccomp.o filter.o bridge.o \
+	bootstrap.o syscall-trampo.o tinylibc.o sig-trampo.o
 
 all:: libtongdao.so syscall-trampo.bin
 
-libtongdao.so: seccomp.o filter.o bridge.o bootstrap.o syscall-trampo.o
-	$(CXX) -shared -o $@ syscall-trampo.o seccomp.o filter.o bridge.o bootstrap.o
+libtongdao.so:  $(libtongdao_so_OBJS)
+	$(CXX) -shared -o $@ $(libtongdao_so_OBJS)
 
 syscall-trampo.bin: syscall-trampo.o
 	objcopy  -j .text -O binary syscall-trampo.o syscall-trampo.bin
 
 syscall-trampo.o: syscall-trampo-x86_64.S
+	$(CXX) $(CFLAGS) -c -o $@ $<
+
+sig-trampo.o: sig-trampo-x86_64.S
 	$(CXX) $(CFLAGS) -c -o $@ $<
 
 seccomp.o: seccomp.cpp seccomp.h bridge.h
@@ -22,6 +28,9 @@ bridge.o: bridge.cpp bridge.h
 	$(CXX) $(CFLAGS) -c $< -I../toolkits
 
 bootstrap.o: bootstrap.cpp
+	$(CXX) $(CFLAGS) -c $<
+
+tinylibc.o: tinylibc.cpp
 	$(CXX) $(CFLAGS) -c $<
 
 clean::
