--- a/sandbox/tests/Makefile
+++ b/sandbox/tests/Makefile
@@ -1,14 +1,15 @@
+CFLAGS := -g
 
 all:: test_dup tdtrampoline test_trampoline
 
 test_dup: test_dup.cpp
-	$(CXX) -o $@ $<
+	$(CXX) $(CFLAGS) -o $@ $<
 
 test_trampoline: test_trampoline.cpp
-	$(CXX) -o $@ $<
+	$(CXX) $(CFLAGS) -o $@ $<
 
 tdtrampoline: faketrampoline.cpp
-	$(CXX) -o $@ $<
+	$(CXX) $(CFLAGS) -o $@ $<
 
 test: test_dup test_trampoline
 	./test.sh ./test_dup
