--- a/loader/Makefile
+++ b/loader/Makefile
@@ -1,6 +1,7 @@
 CFLAGS:= -fpic -Wall -Werror
+BINS := test_ptracetools
 
-all: shellcode.o ptracetools.o
+all:: shellcode.o ptracetools.o $(BINS)
 
 shellcode.o: shellcode.S
 	$(CC) $(CFLAGS) -c $<
@@ -8,5 +9,11 @@ shellcode.o: shellcode.S
 ptracetools.o: ptracetools.cpp
 	$(CXX) $(CFLAGS) -c $<
 
+test:: test_ptracetools
+	./test_ptracetools
+
+test_ptracetools: ptracetools.cpp shellcode.S
+	$(CXX) -o $@ -DTEST ptracetools.cpp shellcode.S
+
 clean::
-	rm -f *.o *~
+	rm -f *.o *~ $(BINS)
