The tools to make the sandbox of a process taking off.
flightdeck.cpp make the sandbox taking off by injecting a loader to a
process to load libtongdao.so in that process.  Once libtongdao.so has
initialized in a process, it's sandbox is ready.

--- a/loader/Makefile
+++ b/loader/Makefile
@@ -1,13 +1,28 @@
 CFLAGS:= -fpic -Wall -Werror
-BINS := test_ptracetools
+BINS := test_ptracetools test_flightdeck
+LIBS := libloader.so
 
-all:: shellcode.o ptracetools.o $(BINS)
+libloader_so_OBJS := ptracetools.o shellcode.o loader.o flightdeck.o
+
+all:: $(BINS) $(LIBS)
+
+libloader.so: $(libloader_so_OBJS)
+	$(CXX) $(CFLAGS) -shared -o $@ $(libloader_so_OBJS)
 
 shellcode.o: shellcode.S
-	$(CC) $(CFLAGS) -c $<
+	$(CC) $(CFLAGS) -fvisibility=hidden -nostdlib -c $<
+
+loader.o: loader.cpp
+	$(CXX) $(CFLAGS) -fvisibility=hidden -nostdlib -fno-builtin -c $<
 
 ptracetools.o: ptracetools.cpp
 	$(CXX) $(CFLAGS) -c $<
+
+flightdeck.o: flightdeck.cpp
+	$(CXX) $(CFLAGS) -c $<
+
+test_flightdeck: flightdeck.cpp ptracetools.o shellcode.o loader.o
+	$(CXX) -DTEST -o $@ $< ptracetools.o shellcode.o loader.o
 
 test:: test_ptracetools
 	./test_ptracetools
@@ -16,4 +31,4 @@ test_ptracetools: ptracetools.cpp shellcode.S
 	$(CXX) -o $@ -DTEST ptracetools.cpp shellcode.S
 
 clean::
-	rm -f *.o *~ $(BINS)
+	rm -f *.o *~ $(BINS) $(LIBS)
