Prove forking in a sighandler can return to the interrupted instruction.

--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,8 +1,11 @@
 
-all:: tryseccomp tryptrace
+all:: tryseccomp tryptrace fork_in_sig
 
 tryseccomp: tryseccomp.cpp
 	$(CXX) -o $@ tryseccomp.cpp -lpthread
 
 tryptrace: tryptrace.cpp
 	$(CXX) -o $@ tryptrace.cpp
+
+fork_in_sig: fork_in_sig.cpp
+	$(CXX) -o $@ fork_in_sig.cpp
