--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -1,8 +1,11 @@
 
-CFLAGS := -Wall -Werror -fpic -fvisibility=hidden -fno-builtin -nostdlib -I./ -fno-builtin
+# -fno-exceptions to avoid the symbol __gxx_personality_v0 of personality routine.
+# see https://itanium-cxx-abi.github.io/cxx-abi/abi-eh.html#base-personality
+CFLAGS := -Wall -Werror -fpic -fvisibility=hidden -fno-builtin -nostdlib \
+	-I./ -fno-builtin -I../loader -fno-exceptions
 
 libtongdao_so_OBJS := bootstrap.o seccomp.o filter.o bridge.o \
-	syscall-trampo.o tinylibc.o sig-trampo.o tinymalloc.o
+	syscall-trampo.o tinylibc.o sig-trampo.o tinymalloc.o scout.o
 
 all:: libtongdao.so syscall-trampo.bin
 
@@ -34,6 +37,9 @@ tinylibc.o: tinylibc.cpp
 	$(CXX) $(CFLAGS) -c $<
 
 tinymalloc.o: tinymalloc.cpp
+	$(CXX) $(CFLAGS) -c $<
+
+scout.o: scout.cpp scout.h
 	$(CXX) $(CFLAGS) -c $<
 
 clean::
