--- a/loader/tests/Makefile
+++ b/loader/tests/Makefile
@@ -1,10 +1,7 @@
 
-BINS := test_scout_conn
+BINS :=
 
 all:: $(BINS)
-
-test_scout_conn: test_scout_conn.cpp ../cmdcenter.h ../scout.h
-	$(CXX) -o $@ $< -I.. ../libloader.so
 
 clean:
 	rm -f *.o *~ $(BINS)
