--- a/sandbox/tests/Makefile
+++ b/sandbox/tests/Makefile
@@ -14,13 +14,17 @@ tdtrampoline: faketrampoline.cpp
 	$(CXX) $(CFLAGS) -o $@ $<
 
 test_scout_conn: test_scout_conn.cpp ../../loader/cmdcenter.h ../scout.h
-	$(CXX) -DDUMMY -DTEST_CC_CHANNEL -o $@ $< ../scout.cpp -I.. -I../../loader ../../loader/libloader.so
+	$(CXX) -DDUMMY -DTEST_CC_CHANNEL -o $@ $< ../scout.cpp -I.. -I../../loader -I../../toolkits ../../loader/libloader.so
 
 fake_cc: fake_cc.cpp
 	$(CXX) -o $@ $<
 
-test: test_dup test_trampoline
+test: test_dup test_trampoline test_scout_conn fake_cc
 	./test.sh ./test_dup
+	@echo
+	./fake_cc ./test_scout_conn
+	@echo
+	./fake_cc ./test_trampoline
 
 clean::
 	rm -f *~ $(BINS)
