Handle more syscalls.

--- a/loader/tests/Makefile
+++ b/loader/tests/Makefile
@@ -1,9 +1,12 @@
 
-BINS := hello
+BINS := hello test_execvpe
 
 all:: $(BINS)
 
 hello: hello.cpp
+	$(CXX) -g -o $@ $<
+
+test_execvpe: test_execvpe.cpp
 	$(CXX) -g -o $@ $<
 
 clean:
