--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -2,11 +2,12 @@
 # -fno-exceptions to avoid the symbol __gxx_personality_v0 of personality routine.
 # see https://itanium-cxx-abi.github.io/cxx-abi/abi-eh.html#base-personality
 CFLAGS := -Wall -Werror -fpic -fvisibility=hidden -fno-builtin -nostdlib \
-	-I./ -Ifake-inc/ -fno-builtin -I../loader -fno-exceptions -I../toolkits
+	-I./ -Ifake-inc/ -fno-builtin -I../loader -fno-exceptions -I../toolkits \
+	-fno-stack-protector -DDEBUG
 
 libtongdao_so_OBJS := bootstrap.o seccomp.o filter.o bridge.o \
 	syscall-trampo.o tinylibc.o sig-trampo.o tinymalloc.o scout.o \
-	../toolkits/msghelper.o
+	../toolkits/msghelper.o fakeframe-trampo.o
 
 .PHONY: all clean test
 
@@ -19,6 +20,9 @@ syscall-trampo.bin: syscall-trampo.o
 	objcopy  -j .text -O binary syscall-trampo.o syscall-trampo.bin
 
 syscall-trampo.o: syscall-trampo-x86_64.S
+	$(CXX) $(CFLAGS) -c -o $@ $<
+
+fakeframe-trampo.o: fakeframe-trampoline-x86_64.S
 	$(CXX) $(CFLAGS) -c -o $@ $<
 
 sig-trampo.o: sig-trampo-x86_64.S
