Fix the case that execve() fails.
For the case that execve() fails, it doesn't cause SIGSTRAP.  So, the
Command Center doesn't receive any events and wait forever.

This patch add a handler for execve() to make a SIGTRAP by calling
kill() to notify the Command Center.  By checking the event of the
signal; 0, not PTRACE_EVENT_EXEC, the Command Center know that
execve() fails.

--- a/loader/Makefile
+++ b/loader/Makefile
@@ -42,6 +42,13 @@ test:: test_ptracetools test_flightdeck carrier tests
 	../sandbox/tests/fake_cc ./test_flightdeck
 	@echo
 	LD_LIBRARY_PATH=../sandbox:./ ./carrier ./tests/hello
+	@echo
+	LD_LIBRARY_PATH=../sandbox:./ ./carrier ./tests/test_execvpe
+	@echo
+	rm -f hello.o; \
+	LD_LIBRARY_PATH=../sandbox:./ \
+	  ./carrier /usr/bin/gcc -c tests/hello.cpp; \
+	if [ -e hello.o ]; then echo "OK"; else echo "FAILED"; fi
 
 tests:
 	$(MAKE) -C tests
