Start oglfs a remote file system.

--- a/oglfs/Makefile
+++ b/oglfs/Makefile
@@ -1,6 +1,19 @@
-CFLAGS := -I../toolkits
+CFLAGS := -I../toolkits -I../3rd-parties/sha2-1.0.1 -g
 
-all: ogl.o
+.PHONY: all clean test
+
+all: libogl.a
+	$(MAKE) -C tests
+
+libogl.a: ogl.o
+	$(AR) rc libogl.a ogl.o
 
 ogl.o: ogl.cpp ogl.h otypes.h
 	$(CXX) $(CFLAGS) -c $<
+
+clean:
+	$(MAKE) -C tests clean
+	rm -f *~ *.o
+	rm -f *.a
+
+test:
