Fix |make clean|.

--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,5 +1,6 @@
+BINS := tryseccomp tryptrace fork_in_sig
 
-all:: tryseccomp tryptrace fork_in_sig
+all:: $(BINS)
 
 tryseccomp: tryseccomp.cpp
 	$(CXX) -o $@ tryseccomp.cpp -lpthread
@@ -9,3 +10,6 @@ tryptrace: tryptrace.cpp
 
 fork_in_sig: fork_in_sig.cpp
 	$(CXX) -o $@ fork_in_sig.cpp
+
+clean::
+	rm -f *.o $(BINS)
