Lower the weight of owning connetions.

--- a/oglfs/Makefile
+++ b/oglfs/Makefile
@@ -5,11 +5,14 @@ CFLAGS := -I../toolkits -I../3rd-parties/sha2-1.0.1 -g
 all: libogl.a
 	$(MAKE) -C tests
 
-libogl.a: ogl.o
+libogl.a: ogl.o oglproto.o
 	$(AR) rc libogl.a ogl.o
 
 ogl.o: ogl.cpp ogl.h otypes.h
 	$(CXX) $(CFLAGS) -c $<
+
+oglproto.o: oglproto.cpp oglproto.h ogl.h otypes.h ../mux/mux.h
+	$(CXX) $(CFLAGS) -c $< -I../mux
 
 clean:
 	$(MAKE) -C tests clean
